src/objects/Third_Party__c.object
<CustomObject>
    <description>In the rights letters process, represents contacts associated with the customer who will receive copies of printed documents.</description>
    <fields>
        <fullName>Address1__c</fullName>
        <description>SRC: Salesforce 
INT: 
Trans: N 
BU: RL 
FD: First line of street address for the third party recipient of a form.</description>
        <label>Address1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address2__c</fullName>
        <description>SRC: Salesforce 
INT: 
Trans: N 
BU: RL 
FD: Second line of street address for the third party recipient of a form.</description>
        <label>Address2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attorney_Representing_Borrower__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SRC: Salesforce 
INT: 
Trans: N 
BU: RL 
FD: Lookup to FAC to indicate the third party recipient is an attorney representing the related borrower (FAC).</description>
        <label>Attorney Representing Borrower</label>
        <referenceTo>Financial_Account_Customer__c</referenceTo>
        <relationshipLabel>Attorneys</relationshipLabel>
        <relationshipName>Attorneys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>City_State_Zip_Code__c</fullName>
        <description>SRC: Salesforce 
INT: 
Trans: N 
BU: RL 
FD: Combined city, state, and zip code to fill-in the third address line for the third party recipient of a form.</description>
        <label>City, State, Zip Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Financial_Account__c</fullName>
        <description>SRC: Salesforce 
INT: 
Trans: N 
BU: RL 
FD: Formula field to pull down the related financial account reference.</description>
        <formula>Repossession__r.Financial_Account__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Financial Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <description>SRC: Salesforce 
INT: 
Trans: N 
BU: RL 
FD: First name for the third party recipient of a form.</description>
        <label>First Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <description>SRC: Salesforce 
INT: 
Trans: N 
BU: RL 
FD: Last name for the third party recipient of a form.</description>
        <label>Last Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Repossession__c</fullName>
        <description>SRC: Salesforce 
INT: 
Trans: N 
BU: RL 
FD: Master-detail relationship field to link third party recipient with a repossession record.</description>
        <label>Repossession</label>
        <referenceTo>Repossession__c</referenceTo>
        <relationshipLabel>Third Parties</relationshipLabel>
        <relationshipName>Third_Parties</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <label>Third Party</label>
    <nameField>
        <displayFormat>TP-{000000}</displayFormat>
        <label>Third Party ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Third Parties</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>